unpackaged/main/default/objects/CMPL123TMS__Course_Offering__c/CMPL123TMS__Course_Offering__c.object-meta.xml
<CustomObject>
    <description>Training Management Course offering</description>
    <label>Course Offering</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Course Offering ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>