unpackaged/main/default/objects/CMPL123TMS__Course_Offering__c/fields/CMPL123TMS__Instructor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </CustomField>