unpackaged/main/default/objects/CMPL123TMS__Course_Offering__c/fields/CMPL123TMS__Is_Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>