unpackaged/main/default/objects/CMPL123TMS__Course_Offering__c/fields/CMPL123TMS__Related_Library__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_Library__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Library</label>
        <referenceTo>CMPL123TMS__Library__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </CustomField>