unpackaged/main/default/objects/CMPL123TMS__Course_Offering__c/fields/CMPL123TMS__Schedule_Date_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Schedule_Date_Time__c</fullName>
        <label>Schedule Date/Time</label>
        <type>DateTime</type>
    </CustomField>